# lazydraft

./: .gitignore  .goreleaser.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  go.mod  go.sum  lazy-publish  main.go  test-project.yaml
.github/workflows/: release.yml
Formula/: lazy-publish.rb
cmd/: app.go  commandparser.go  config.go  draft.go  draftCommand.go  init.go  project.go  projectCommand.go  root.go  rootCommand.go
config/: inputFile.go  postListInfo.go  project.go  projectList.go  util.go  yamlFile.go
lazydraft/: inputFile.go  post.go  postListInfo.go  project.go  projectList.go  settings.go  util.go  yamlFile.go
lazypublish/: inputFile.go  postListInfo.go  project.go  projectList.go  util.go  yamlFile.go
src/: asset.rs  cli.rs  command.rs  commands.rs  config.rs  dashboard.rs  frontmatter.rs  main.rs  project.rs  tui.rs  views.rs  writing.rs
util/: convert-name.go  file.go  input.go  log.go
