[package]
name = "lazydraft"
version = "3.6.0"
edition = "2021"

[profile.release]
debug = 0       # Disable debug information
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
yaml-rust = "0.4.5"
pulldown-cmark = "0.9.3"
walkdir = "2.4"
serde_yaml = "0.9"
itertools = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
regex = "1.10"
notify = "6.1"
colored = "2.1"
toml = "0.8"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["rt", "sync"] }
